[package]
name = "cn-poe-export"
version = "0.0.0"
description = "Export CN POE data for POB community"
authors = ["cn-poe-community"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
log4rs = "1.2.0"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["dialog", "shell-open"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
